<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_title"/>

    <EditText
        android:id="@+id/schedule_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_details"/>

    <EditText
        android:id="@+id/schedule_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details_hint"/>

    <Button
        android:id="@+id/create_schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_schedule"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>


</LinearLayout>